--- a/client-side/src/app/landing/landing.component.html
+++ b/client-side/src/app/landing/landing.component.html
@@ -1,3 +1,20 @@
-<div class="col-12">
-    
+<app-landing-nav></app-landing-nav>
+<div class="container">
+  <div class="row text-center border">
+    <div class="col-sm-5">
+      
+    </div>
+    <div class="col-sm-7 border">
+      <h1>Hello World</h1>
+      <div class="row">
+        <div class="col-sm-6">
+            <p>The modern way to control your savingswith just one app.</p>
+        </div>
+        <div class="col-sm-6">
+          Another column code
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
