--- a/client-side/src/app/dashboard/dashboard.component.css
+++ b/client-side/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,10 @@
 .cursorPointer{
     cursor: pointer;
 }
+.scrollableForm{
+    height: 70vh;
+    overflow-y: auto;
+}
+.scrollableForm::-webkit-scrollbar{
+    width: 3px;
+}
