--- a/client-side/src/app/pages/statistics/statistics.component.html
+++ b/client-side/src/app/pages/statistics/statistics.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="card">
-        <h3 class="card-header bg-primary text-light">Transactions Analysis</h3>
+        <h3 class="card-header bg-danger text-light">Transactions Analysis</h3>
         <div class="row p-3">
             <div class="col-4">
                 <p class="text-title text-muted">Current Balance</p>
