--- a/client-side/src/app/sidenav/sidenav.component.css
+++ b/client-side/src/app/sidenav/sidenav.component.css
@@ -1,3 +1,4 @@
+
 .side-nav-content{
     width: 220px;
     display: flex;
@@ -24,22 +25,28 @@
 .sidenav-nav-link{
     display: flex;
     align-items: center;
-    border-radius: 0.625rem;
     height: 3rem;
     color: #f3f3f3;
     text-decoration: none;
     transition: color .3s ease;
-    font-size: 20px;
+    font-size: 17px;
     min-width: 2rem;
     margin: 0 0.5rem;
     text-align: center;
 }
 .sidenav-nav-link:hover{
+    transition: all 0.5s ease;
     background-color: rgb(201, 192, 192);
     color: rgb(3, 3, 49);
+    border-left: 4px solid white;
+    border-bottom-right-radius: 1vh;
+    border-top-right-radius: 1vh;
 }
 .router-link-active{
     background-color: rgb(201, 192, 192);
+    border-left: 4px solid white;
     color: rgb(3, 3, 49);
     font-weight: bold;
+    border-bottom-right-radius: 1vh;
+    border-top-right-radius: 1vh;
 }
