--- a/client-side/src/app/transfer/transfer.component.html
+++ b/client-side/src/app/transfer/transfer.component.html
@@ -1,1 +1,78 @@
-<p>transfer works!</p>
+<app-header (sideNavToggled)="sideNavStatus = $event"></app-header>
+<main>
+    <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}"></app-sidenav>
+    <div class="display-area" [ngClass]="{'display-area-shrink': sideNavStatus}">
+        <h1 class="bg-danger px-2 text-light">Transfer Session</h1>
+        <div class="container card border-0">
+            <h3 class="card-header bg-white"><span class="fw-bold text-danger">NOTE:</span> Make a quick and easy transfer to another FIXTECH account</h3>
+            <div class="row">
+                <div class="col-sm-3 shadow-sm">
+                    <div *ngIf="confirmTransferErr != undefined" class="text-center">
+                        <span *ngIf="confirmTransferErr == true" class="alert alert-danger p-0">{{confirmTransferMessage}}</span>
+                        <span *ngIf="confirmTransferErr == false" class="alert alert-success p-0">{{confirmTransferMessage}}</span>
+                    </div>
+                    
+                    <div class="form-group my-2">
+                        <div *ngIf="errStatus" class="text-danger alert alert-danger">
+                            {{message}}
+                        </div>
+                        <label for="">Search Recipient</label>
+                        <div class="input-group rounded px-2">
+                            <fa-icon [icon]="icons.searchIcon" class="text-muted"></fa-icon>
+                            <input type="text" name="" id="" class="form-control" placeholder="Enter recipient account number" [(ngModel)]="beneficiary_accNumber">
+                            <fa-icon [icon]="icons.userIcon" class="text-muted"></fa-icon>
+                        </div>
+                    </div>
+                    <!-- <div class="display_recipient my-3">
+                        <div class="users-column" *ngFor="let user of allUsers | checkUser: beneficiary_accNumber ">
+                            <div class="card-title">
+                                <h5>{{user.firstname + " " + user.lastname}}</h5>
+                                <p>{{user.accountNumber}}</p>
+                            </div>
+                        </div>
+                    </div> -->
+                    <div>
+                        <button class="btn btn-danger float-end" *ngIf="errStatus == undefined || errStatus==true"  (click)="beneficiary_continue()">Continue</button>
+                    </div>
+
+                    <div class="form-group shadow-sm my-3 p-2" *ngIf="errStatus == false">
+                        <!-- <div class="form-group shadow-sm my-3 p-2" > -->
+                        <div class="beneficiary-detail shadow-sm" *ngIf="recipientDetail">
+                                <h3>{{recipientDetail.firstname+" "+recipientDetail.lastname}}</h3>
+                                <p>{{recipientDetail.accountNumber}}</p>
+                        </div>
+                        <div *ngIf="amtErrStatus" class="text-danger alert alert-danger">
+                            {{amtMessage}}
+                        </div>
+                        <label for="" class="card-title fw-bold">Enter amount to transfer</label>
+                        <input type="text" class="form-control border border-primary" (keyup)="addText($event)" >
+                        <button class="btn bg-color my-2 float-end" (click)="addAmount()" data-bs-toggle="modal" data-bs-target="#exampleModal">Continue</button>
+                    </div>
+                 
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngIf="amtErrStatus == false">
+                      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title text-center" id="exampleModalLabel">Notification!!!</h5>
+                          </div>
+                          <div class="modal-body">
+                                You are about to transfer `amountToTransfer` to `recipient name`
+                                enter your pin
+                                <input type="number" class="form-control" placeholder="PIN">
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary" (click)="confirmTransfer()" data-bs-dismiss="modal">Transfer</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-9 shadow-sm">
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
