--- a/client-side/src/app/user-profile/user-profile.component.css
+++ b/client-side/src/app/user-profile/user-profile.component.css
@@ -1,35 +1,20 @@
-.spinner {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
+
+   .h1_text{
+        background-color: rgb(204, 29, 29);
+        color: white;
+        font-size: 3vh;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    }
-   
-   .spinner::before,
-   .spinner:after {
-    content: "";
-    position: absolute;
-    border-radius: inherit;
+   .profile_picture{
+    text-align: center;
+
    }
-   
-   .spinner:before {
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(0deg, #ff00cc 0%, #333399 100%);
-    animation: spin8932 .5s infinite linear;
+   .customer_name{
+    border-bottom: 2px solid navy;
    }
-   
-   .spinner:after {
-    width: 85%;
-    height: 85%;
-    background-color: #eee3e3;
-    top: 50%;
-    left: 100%;
-    transform: translate(-50%, -50%);
+   .content{
+    height: 60vh;
+    overflow: auto;
    }
-   
-   @keyframes spin8932 {
-    to {
-     transform: rotate(360deg);
-    }
-   }
+
+ 
