--- a/client-side/src/styles.css
+++ b/client-side/src/styles.css
@@ -22,7 +22,7 @@ main{
 app-sidenav{
     position: absolute;
     width: 0px;
-    background: rgb(3, 3, 49);
+    background: navy;
     height: 90vh;
     border-top: 1px solid white;
     white-space: nowrap;
@@ -36,7 +36,7 @@ app-sidenav{
     width: 100%;
     height: 100vh;
     transition: left 250ms linear, width 250ms linear;
-    overflow: auto;
+    overflow: hidden;
 }
 .display-area-shrink{
     left: 17%;
@@ -49,31 +49,28 @@ app-sidenav{
     overflow: auto;
     height: 100vh;
 }
-.display-area-shrink::-webkit-scrollbar{
-    width: 3px;
-    border-radius: 6vh;
-    overflow: auto;
-    height: 100vh;
-}
+
 .display-area::-webkit-scrollbar-thumb{
     background: rgb(3, 3, 49);
-  border-radius: 10px;
+    border-radius: 10px;
 }
-.display-area-shrink::-webkit-scrollbar-thumb{
-    background: rgb(3, 3, 49);
-  border-radius: 10px;
-}
+
 .display-area::-webkit-scrollbar-track{
     box-shadow: inset 0 0 5px rgb(209, 201, 201);
     border-radius: 10px;
 }
-.display-area-shrink::-webkit-scrollbar-track{
-    box-shadow: inset 0 0 5px rgb(209, 201, 201);
-    border-radius: 10px;
-}
+
 .app-side-nav-open{                              
     width: 230px;
     transition: all 0.5s ease;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+fa-icon{
+    font-size: 3vh;
+}
+
+.navbar-brand {
+    font-family: cursive;
+}
