--- a/client-side/src/app/transfer/transfer.component.html
+++ b/client-side/src/app/transfer/transfer.component.html
@@ -3,7 +3,7 @@
     <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}"></app-sidenav>
     <div class="display-area" [ngClass]="{'display-area-shrink': sideNavStatus}">
         <h1 class="bg-danger px-2 text-light">Transfer Session</h1>
-        <div class="container card border-0">
+        <div class="container card border-0 shadow-sm py-2">
             <h3 class="card-header bg-white"><span class="fw-bold text-danger">NOTE:</span> Make a quick and easy transfer to another FIXTECH account</h3>
             <div class="row">
                 <div class="col-sm-3 shadow-sm">
@@ -13,8 +13,11 @@
                     </div>
                     
                     <div class="form-group my-2">
-                        <div *ngIf="errStatus" class="text-danger alert alert-danger">
-                            {{message}}
+                        <div *ngIf="errStatus != undefined">
+                            <div *ngIf="errStatus" class="text-danger alert alert-danger">
+                                {{message}}
+                            </div>
+
                         </div>
                         <label for="">Search Recipient</label>
                         <div class="input-group rounded px-2">
@@ -35,6 +38,9 @@
                         <button class="btn btn-danger float-end" *ngIf="errStatus == undefined || errStatus==true"  (click)="beneficiary_continue()">Continue</button>
                     </div>
 
+                    
+                </div>
+                <div class="col-sm-9 shadow-sm">
                     <div class="form-group shadow-sm my-3 p-2" *ngIf="errStatus == false">
                         <!-- <div class="form-group shadow-sm my-3 p-2" > -->
                         <div class="beneficiary-detail shadow-sm" *ngIf="recipientDetail">
@@ -67,9 +73,6 @@
                         </div>
                       </div>
                     </div>
-
-                </div>
-                <div class="col-sm-9 shadow-sm">
                     
                 </div>
             </div>
