--- a/client-side/src/app/signup/signup.component.html
+++ b/client-side/src/app/signup/signup.component.html
@@ -4,7 +4,7 @@
         
         <h3 class="text-center card-header bg-primary rounded-3 text-light py-2">Create Your Account</h3>
         <!-- <small class="alert alert-danger py-0" *ngIf="message != ''">{{message}}</small> -->
-        <small class="alert py-1 {{resStatus? 'alert-success' : 'alert-danger'}} " *ngIf="message != ''">{{resMessage}}</small>
+        <small class="alert py-1 {{resStatus? 'alert-success' : 'alert-danger'}} text-center" *ngIf="message != ''">{{message}}</small>
         <form [formGroup]="formGroup" (submit)="handleRegister()" class="scrollableForm">
         <div class="row">
             <div class="form-group col-md-6 my-3">
