--- a/client-side/src/app/transaction-history/transaction-history.component.html
+++ b/client-side/src/app/transaction-history/transaction-history.component.html
@@ -1,1 +1,62 @@
-<p>transaction-history works!</p>
+<app-header (sideNavToggled)="sideNavStatus = $event"></app-header>
+<main>
+    <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}">
+    </app-sidenav>
+    <div class="display-area p-3" [ngClass]="{'display-area-shrink': sideNavStatus}">
+        <div class="container">
+            <p class="ps-2 text-danger fs-3 fw-bold">Transaction <span class="text-color">History</span></p>
+            <div class="row">
+                <div class="col-sm-6 border my-3 rounded p-2">
+                    <div class="shadow p-2">
+                        <h2 class="text-color">Credit</h2>
+                        <ng-container *ngIf="creditTransaction.length; then isNotEmpty; else isEmpty"></ng-container>
+                        <ng-template #isNotEmpty>
+                            <table class="table table-striped table-bordered table-hover table-responsive-sm scrollableTable">
+                                <tr>
+                                    <th>Amount($)</th>
+                                    <th>From (Account Number)</th>
+                                    <th>Method</th>
+                                    <th>Date</th>
+                                </tr>
+                                <tr *ngFor="let item of creditTransaction">
+                                    <td>{{item.amount}}</td>
+                                    <td>{{item.senderAccountNumber}}</td>
+                                    <td>{{item.method}}</td>
+                                    <td>{{item.timeStamp| date}}</td>
+                                </tr>
+                            </table>
+                        </ng-template>
+                        <ng-template #isEmpty>
+                            <h2 class="text-danger">No credit Hostory</h2>
+                        </ng-template>
+                    </div>
+                </div>
+                <div class="col-sm-6 border my-3 p-2 scrollableTable">
+                    <div class="shadow p-2">
+                        <h2 class="text-color">Debit</h2>
+                        <ng-container *ngIf="debitTransaction.length; then isNotEmpty; else isEmpty"></ng-container>
+                        <ng-template #isNotEmpty>
+                            <table class="table table-striped table-bordered table-hover table-responsive-sm scrollableTable">
+                                <tr>
+                                    <th>Amount($)</th>
+                                    <th>To(Account Number)</th>
+                                    <th>Method</th>
+                                    <th>Date</th>
+                                </tr>
+                                <tr *ngFor="let item of debitTransaction">
+                                    <td>{{item.amount}}</td>
+                                    <td>{{item.recipientAccountNumber}}</td>
+                                    <td>{{item.method}}</td>
+                                    <td>{{item.timeStamp| date}}</td>
+                                </tr>
+                            </table>
+                        </ng-template>
+                        <ng-template #isEmpty>
+                            <h2 class="text-danger">No Debit Hostory</h2>
+                        </ng-template>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
