updated the transaction history page

--- a/client-side/src/app/add-money/add-money.component.css
+++ b/client-side/src/app/add-money/add-money.component.css
@@ -7,7 +7,7 @@
     width: 3px;
     border-radius: 6vh;
     overflow: auto;
-    height: 100vh;
+    max-height: 100vh;
 }
 
 .content_list_column::-webkit-scrollbar-thumb {
