editing of profile information done

--- a/client-side/src/app/pages/landing-nav/landing-nav.component.html
+++ b/client-side/src/app/pages/landing-nav/landing-nav.component.html
@@ -20,6 +20,9 @@
           </li>
 
         </ul>
+        <a routerLink="/login" class="signupBtn">
+          <span class="text">Log In</span>
+        </a>
         <a routerLink="/register" class="signupBtn">
           <span class="text">Sign up</span>
         </a>
