--- a/client-side/src/app/settings/settings.component.html
+++ b/client-side/src/app/settings/settings.component.html
@@ -1,53 +1,118 @@
 <app-header (sideNavToggled)="sideNavStatus = $event"></app-header>
 <main>
-    <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}">
-    </app-sidenav>
-    <div class="display-area" [ngClass]="{'display-area-shrink': sideNavStatus}">
-        <h1 class="bg-danger p-2 text-light">Profile Setting</h1>
-        <div class="container">
-               <div class="profile_picture text-center">
-                <img src="{{userDetail !== undefined? (userDetail['profile_picture'] == '')? 'assets/user.jpg' : userDetail['profile_picture']
-                : 'assets/user.jpg'}}" alt="loading" class="rounded-circle border" style="height: 150px; width: 150px;">
-                <label for="myFile">
-                    <fa-icon [icon]="pencil" style="color: navy; cursor: pointer;"></fa-icon>
-                    <input type="file" class="d-none" id="myFile" (change)="selectFile($event)">
-                </label>
-                </div>
-               <div class="content p-3">
-                <div class="row content_list_column">
-                    <div class="col-sm-6 p-2 my-3" *ngFor="let item of thisData">
-                        <div class="content_item shadow-sm rounded" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="modalOutEdit({text:item.bold_text})">
-                            <fa-icon [icon]="item.icon" style="font-size: 3vh;"></fa-icon>
-                            <div class="item_text">
-                                <b>{{item.bold_text}}</b>
-                            <p class="text-muted">{{item.light_text}}</p>
-                            </div>
-                            <fa-icon [icon]="greaterSign" class="text-danger" style="font-size: 2vh"></fa-icon>
-                        </div>
-                    </div>
-                </div>
-               </div>
-               <!-- modal column -->
-               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                   <div class="modal-content">
-                     <div class="modal-header">
-                       <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                     </div>
-                     <div class="modal-body">
-                       ...
-                     </div>
-                     <div class="modal-footer">
-                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                       <button type="button" class="btn btn-primary">Save changes</button>
-                     </div>
-                   </div>
-                 </div>
-               </div>
+  <app-sidenav class=" shadow" [sideNavStatus]="sideNavStatus" [ngClass]="{'app-side-nav-open': sideNavStatus}">
+  </app-sidenav>
+  <div class="display-area" [ngClass]="{'display-area-shrink': sideNavStatus}">
+    <h1 class="bg-danger p-2 text-light">Profile Setting</h1>
+    <div class="container">
+      <div class="profile_picture text-center">
+        <img src="{{userDetail !== undefined? (userDetail['profile_picture'] == '')? 'assets/user.jpg' : userDetail['profile_picture']
+                : 'assets/user.jpg'}}" alt="loading" class="rounded-circle border"
+          style="height: 150px; width: 150px;">
+        <label for="myFile">
 
+        <div class="spinner-border text-primary" role="status" *ngIf="ppIsLoading">
+          <span class="visually-hidden">Loading...</span>
+        </div>
 
+          <fa-icon [icon]="pencil" style="color: navy; cursor: pointer;" *ngIf="!ppIsLoading"></fa-icon>
+          <input type="file" class="d-none" id="myFile" (change)="selectFile($event)">
+        </label>
+      </div>
+      <div class="content p-3">
+
+        <div class="dot-spinner mx-auto" *ngIf="isLoading">
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+          <div class="dot-spinner__dot"></div>
+        </div>
+       
+        <div class="row content_list_column">
+          <div class="col-sm-6 p-2 my-3" *ngFor="let item of thisData">
+            <div class="content_item shadow-sm rounded" data-bs-toggle="modal" data-bs-target="#exampleModal"
+              (click)="modalOutEdit({text:item.bold_text})">
+              <fa-icon [icon]="item.icon" style="font-size: 3vh;"></fa-icon>
+              <div class="item_text">
+                <b>{{item.bold_text}}</b>
+                <p class="text-muted">{{item.light_text}}</p>
+              </div>
+              <fa-icon [icon]="greaterSign" class="text-danger" style="font-size: 2vh"></fa-icon>
             </div>
+          </div>
+        </div>
+      </div>
+      <lib-toastify-toast-container [position]="'top-right'" [transition]="'slide'" [autoClose]="7000"
+        [iconLibrary]="'material'">
+      </lib-toastify-toast-container>
+      <!-- modal column -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Edit Your Information</h5>
+            </div>
+            <div class="modal-body">
+              <!-- change Name code -->
+              <div class="form" *ngIf="currentInfoToEdit == 'Change Name'">
+                <div class="row">
+                  <div class="col-sm-6 my-2">
+                    <label for="">First Name</label>
+                    <input type="text" class="form-control" placeholder="Enter First Name" [(ngModel)]="firstname"
+                      value="{{firstname}}">
+                  </div>
+                  <div class="col-sm-6 my-2">
+                    <label for="">Last Name</label>
+                    <input type="text" class="form-control" placeholder="Enter Last Name" [(ngModel)]="lastname"
+                      value="{{lastname}}">
+                  </div>
+                </div>
+              </div>
+              <!-- change Email code -->
+              <div class="form" *ngIf="currentInfoToEdit == 'Change Email'">
+                <div class="row">
+                  <div class="col-sm-12 my-2">
+                    <label for="">Email Address</label>
+                    <input type="text" class="form-control" placeholder="Enter Email" [(ngModel)]="email"
+                      value="{{email}}">
+                    <!-- <input type="text" class="form-control" placeholder="Enter Email" [(ngModel)]="(currentInfoToEdit == 'Change Email')?email: (currentInfoToEdit == 'Change Number')? phoneNumber: (currentInfoToEdit== 'Change Address')&& address" value="{{email}}"> -->
+                  </div>
+                </div>
+              </div>
+              <!-- change phone Number code -->
+              <div class="form" *ngIf="currentInfoToEdit == 'Change Number'">
+                <div class="row">
+                  <div class="col-sm-7 my-2">
+                    <label for="">Phone Number</label>
+                    <input type="tel" class="form-control" placeholder="Phone Number" [(ngModel)]="phoneNumber"
+                      value="{{phoneNumber}}">
+                  </div>
+                </div>
+              </div>
+              <!-- change Address code -->
+              <div class="form" *ngIf="currentInfoToEdit == 'Change Address'">
+                <div class="row">
+                  <div class="col-sm-12 my-2">
+                    <label for="">Address</label>
+                    <textarea type="text" cols="5" rows="3" class="form-control" placeholder="Address" [(ngModel)]="address"
+                      value="{{address}}"></textarea>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn bg-navy" (click)="saveChanges()" data-bs-dismiss="modal">Save
+                changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</main>
 
+  </div>
+</main>
